--- a/grails-app/assets/stylesheets/style.css
+++ b/grails-app/assets/stylesheets/style.css
@@ -1038,58 +1038,67 @@ hr {
         float: left;
         width: 25%; }
 
-.new-releases-slider.owl-carousel .owl-dots {
-  text-align: center;
-  padding: 10px; }
-.new-releases-slider.owl-carousel .owl-item .poster-image {
-  float: left;
-  width: auto; }
-.new-releases-slider.owl-carousel .new-releases-slide {
-  background-size: cover;
-  background-position: 50% 50%; }
-  .new-releases-slider.owl-carousel .new-releases-slide:after {
-    content: "";
-    display: table;
-    clear: both; }
-.new-releases-slider.owl-carousel .info-icon {
-  position: absolute;
-  bottom: 7px;
-  right: 7px;
-  line-height: 1em;
-  font-size: 31px;
-  color: #B0DDEF;
-  text-shadow: 1px 1px 1px black;
-  z-index: 9; }
-.new-releases-slider.owl-carousel .new-release-footer {
-  position: absolute;
-  left: 342px;
-  background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.71) 20%);
-  padding: 34px;
-  bottom: 0;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center; }
-  .new-releases-slider.owl-carousel .new-release-footer .play-icon {
-    -webkit-box-flex: none;
-    -moz-box-flex: none;
-    -webkit-flex: none;
-    -ms-flex: none;
-    flex: none;
-    margin-right: 30px;
-    font-size: 50px; }
-.new-releases-slider.owl-carousel .new-releases-description h3 {
-  font-size: 32px;
-  text-transform: none;
-  font-weight: 100; }
-.new-releases-slider.owl-carousel .new-releases-description h4 {
-  font-size: 22px;
-  font-weight: 100; }
+.new-releases-slider {
+  opacity: 0;
+  -moz-transition: opacity 0.3s;
+  -webkit-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
+  -ms-transition: opacity 0.3s;
+  transition: opacity 0.3s; }
+  .new-releases-slider.owl-carousel {
+    opacity: 1; }
+    .new-releases-slider.owl-carousel .owl-dots {
+      text-align: center;
+      padding: 10px; }
+    .new-releases-slider.owl-carousel .owl-item .poster-image {
+      float: left;
+      width: auto; }
+    .new-releases-slider.owl-carousel .new-releases-slide {
+      background-size: cover;
+      background-position: 50% 50%; }
+      .new-releases-slider.owl-carousel .new-releases-slide:after {
+        content: "";
+        display: table;
+        clear: both; }
+    .new-releases-slider.owl-carousel .info-icon {
+      position: absolute;
+      bottom: 7px;
+      right: 7px;
+      line-height: 1em;
+      font-size: 31px;
+      color: #B0DDEF;
+      text-shadow: 1px 1px 1px black;
+      z-index: 9; }
+    .new-releases-slider.owl-carousel .new-release-footer {
+      position: absolute;
+      left: 342px;
+      background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.71) 20%);
+      padding: 34px;
+      bottom: 0;
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-flex-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center; }
+      .new-releases-slider.owl-carousel .new-release-footer .play-icon {
+        -webkit-box-flex: none;
+        -moz-box-flex: none;
+        -webkit-flex: none;
+        -ms-flex: none;
+        flex: none;
+        margin-right: 30px;
+        font-size: 50px; }
+    .new-releases-slider.owl-carousel .new-releases-description h3 {
+      font-size: 32px;
+      text-transform: none;
+      font-weight: 100; }
+    .new-releases-slider.owl-carousel .new-releases-description h4 {
+      font-size: 22px;
+      font-weight: 100; }
 
 #login {
   margin: 15px 0px;
